--- a/climy/package.json
+++ b/climy/package.json
@@ -10,13 +10,12 @@
   },
   "dependencies": {
     "leaflet": "^1.7.1",
-    "next": "11.1.2",
+    "next": "^12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-leaflet": "^3.2.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.7.5",
+    "@types/leaflet": "^1.7.6",
     "@types/react": "17.0.27",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
