--- a/ui/package.json
+++ b/ui/package.json
@@ -11,7 +11,8 @@
     "colormap": "^2.3.2",
     "leaflet": "^1.7.1",
     "ol": "^6.10.0",
-    "regl": "^2.1.0"
+    "regl": "^2.1.0",
+    "three": "^0.138.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.3.1",
@@ -19,9 +20,8 @@
     "@types/leaflet": "^1.7.7",
     "@types/openlayers": "^4.6.18",
     "browserlist": "^1.0.1",
-    "compression": "^1.7.4",
     "parcel": "^2.1.1",
-    "serve-static": "^1.14.2",
+    "send": "^0.17.2",
     "typescript": "^4.5.5",
     "wrangler": "^0.0.16"
   }
