--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,9 @@
   },
   "browserslist": "Chrome >= 56, Safari >= 15, Firefox >= 51, Edge >= 79",
   "dependencies": {
+    "@google/earthengine": "^0.1.309",
+    "@luma.gl/api": "^8.6.0-alpha.1",
+    "@luma.gl/webgl": "^8.5.10",
     "colormap": "^2.3.2",
     "leaflet": "^1.7.1",
     "ol": "^6.10.0",
@@ -16,12 +19,13 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.3.1",
-    "@parcel/transformer-glsl": "^2.0.1",
+    "@parcel/transformer-glsl": "2.4.1",
     "@types/leaflet": "^1.7.7",
     "@types/openlayers": "^4.6.18",
     "browserlist": "^1.0.1",
-    "parcel": "^2.1.1",
-    "send": "^0.17.2",
+    "parcel": "2.4.1",
+    "process": "^0.11.10",
+    "stream-static": "^1.0.0",
     "typescript": "^4.5.5",
     "wrangler": "^0.0.16"
   }
