--- a/ui/package.json
+++ b/ui/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "climy-new",
-  "version": "1.0.0",
-  "author": "squinlan",
-  "license": "MIT",
+  "name": "vite-project",
+  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "start": "parcel --no-cache src/**/*.html"
-  },
-  "browserslist": "Chrome >= 56, Safari >= 15, Firefox >= 51, Edge >= 79",
-  "dependencies": {
-    "@google/earthengine": "^0.1.309",
-    "@luma.gl/api": "^8.6.0-alpha.1",
-    "@luma.gl/webgl": "^8.5.10",
-    "colormap": "^2.3.2",
-    "leaflet": "^1.7.1",
-    "ol": "^6.10.0",
-    "regl": "^2.1.0",
-    "three": "^0.138.0"
+    "dev": "vite",
+    "pretty": "prettier -c .",
+    "test": "jest",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.3.1",
-    "@parcel/transformer-glsl": "2.4.1",
-    "@types/leaflet": "^1.7.7",
-    "@types/openlayers": "^4.6.18",
-    "browserlist": "^1.0.1",
-    "parcel": "2.4.1",
-    "process": "^0.11.10",
-    "stream-static": "^1.0.0",
-    "typescript": "^4.5.5",
-    "wrangler": "^0.0.16"
+    "@cloudflare/workers-types": "^3.11.0",
+    "@rollup/pluginutils": "^4.2.1",
+    "@types/http-errors": "^1.8.2",
+    "@types/jest": "^28.1.1",
+    "@types/leaflet": "^1.7.11",
+    "@types/node": "^17.0.40",
+    "@types/three": "^0.141.0",
+    "glslify": "^7.1.1",
+    "jest": "^28.1.1",
+    "leaflet": "^1.8.0",
+    "prettier": "2.6.2",
+    "regl": "^2.1.0",
+    "stream-static": "^1.0.1",
+    "three": "^0.141.0",
+    "ts-jest": "^28.0.4",
+    "typescript": "^4.5.4",
+    "vite": "^2.9.9",
+    "wrangler": "file:/Users/squinlan/Documents/wrangler2/packages/wrangler"
   }
 }
